pre-commit linting

--- a/supporting-blog-content/clustering/newsgroup_clustering.ipynb
+++ b/supporting-blog-content/clustering/newsgroup_clustering.ipynb
@@ -74,7 +74,11 @@
     "    :return: List of text chunks.\n",
     "    \"\"\"\n",
     "    words = text.split()\n",
-    "    return [\" \".join(words[i:i + max_chunk_size]) for i in range(0, len(words), max_chunk_size)]\n",
+    "    return [\n",
+    "        \" \".join(words[i : i + max_chunk_size])\n",
+    "        for i in range(0, len(words), max_chunk_size)\n",
+    "    ]\n",
+    "\n",
     "\n",
     "def clean_text(text: str) -> str:\n",
     "    \"\"\"\n",
@@ -84,9 +88,10 @@
     "    :return: Cleaned text.\n",
     "    \"\"\"\n",
     "    text = text.lower()\n",
-    "    text = re.sub(r'[^a-z\\s]', '', text)\n",
-    "    text = ' '.join([word for word in text.split() if word not in ENGLISH_STOP_WORDS])\n",
+    "    text = re.sub(r\"[^a-z\\s]\", \"\", text)\n",
+    "    text = \" \".join([word for word in text.split() if word not in ENGLISH_STOP_WORDS])\n",
     "    return text\n",
+    "\n",
     "\n",
     "def generate_embedding_azure_openai(chunks: list[str]) -> list[np.ndarray]:\n",
     "    \"\"\"\n",
@@ -98,17 +103,19 @@
     "    client = AzureOpenAI(\n",
     "        api_key=os.getenv(\"AZURE_OPENAI_API_KEY\"),\n",
     "        api_version=\"2023-05-15\",\n",
-    "        azure_endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "        azure_endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
     "    )\n",
     "    deployment_name = os.getenv(\"AZURE_OPENAI_DEPLOYMENT_NAME\")\n",
     "    if not deployment_name:\n",
-    "        raise ValueError(\"Environment variable AZURE_OPENAI_DEPLOYMENT_NAME must be set.\")\n",
+    "        raise ValueError(\n",
+    "            \"Environment variable AZURE_OPENAI_DEPLOYMENT_NAME must be set.\"\n",
+    "        )\n",
     "\n",
     "    embeddings = []\n",
     "    for chunk in chunks:\n",
     "        response = client.embeddings.create(model=deployment_name, input=[chunk])\n",
     "        embeddings.append(np.array(response.data[0].embedding))\n",
-    "    return embeddings\n"
+    "    return embeddings"
    ]
   },
   {
@@ -143,12 +150,15 @@
    ],
    "source": [
     "categories = [\n",
-    "    'rec.sport.baseball', 'rec.sport.hockey', 'comp.sys.ibm.pc.hardware', 'talk.religion.misc',\n",
-    "    'sci.med'\n",
+    "    \"rec.sport.baseball\",\n",
+    "    \"rec.sport.hockey\",\n",
+    "    \"comp.sys.ibm.pc.hardware\",\n",
+    "    \"talk.religion.misc\",\n",
+    "    \"sci.med\",\n",
     "]\n",
     "\n",
-    "newsgroups_data = fetch_20newsgroups(subset='all', categories=categories)\n",
-    "newsgroups_data['data'][0]"
+    "newsgroups_data = fetch_20newsgroups(subset=\"all\", categories=categories)\n",
+    "newsgroups_data[\"data\"][0]"
    ]
   },
   {
@@ -173,7 +183,7 @@
     }
    ],
    "source": [
-    "target_map = dict(zip(range(5), newsgroups_data['target_names']))\n",
+    "target_map = dict(zip(range(5), newsgroups_data[\"target_names\"]))\n",
     "target_map"
    ]
   },
@@ -208,18 +218,25 @@
     "dataset_filepath = \"data/openai_vectorized_dataset.json\"\n",
     "os.makedirs(\"data\", exist_ok=True)\n",
     "\n",
-    "logger.info(f\"Creating embeddings for newsgroup data. The length of the vectors is {len(newsgroups_data['data'])}\")\n",
+    "logger.info(\n",
+    "    f\"Creating embeddings for newsgroup data. The length of the vectors is {len(newsgroups_data['data'])}\"\n",
+    ")\n",
     "\n",
     "data_with_vectors = []\n",
-    "for doc, target in tqdm(zip(newsgroups_data['data'], newsgroups_data['target']), total=len(newsgroups_data['data'])):\n",
+    "for doc, target in tqdm(\n",
+    "    zip(newsgroups_data[\"data\"], newsgroups_data[\"target\"]),\n",
+    "    total=len(newsgroups_data[\"data\"]),\n",
+    "):\n",
     "    chunks = chunk_text(clean_text(doc))\n",
     "    chunk_vectors = generate_embedding_azure_openai(chunks)\n",
     "    doc_vector = np.max(chunk_vectors, axis=0)\n",
-    "    data_with_vectors.append({\n",
-    "        \"news_body\": doc,\n",
-    "        \"target\": target_map[target],\n",
-    "        \"openai_vector\": doc_vector.tolist(),\n",
-    "    })\n",
+    "    data_with_vectors.append(\n",
+    "        {\n",
+    "            \"news_body\": doc,\n",
+    "            \"target\": target_map[target],\n",
+    "            \"openai_vector\": doc_vector.tolist(),\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "logger.info(f\"Embeddings created for newsgroup data.\")\n",
     "logger.info(f\"Storing dataset to {dataset_filepath}\")\n",
@@ -264,7 +281,7 @@
     }
    ],
    "source": [
-    "print(data_with_vectors[0]['target'])"
+    "print(data_with_vectors[0][\"target\"])"
    ]
   },
   {
@@ -319,7 +336,7 @@
     }
    ],
    "source": [
-    "print(data_with_vectors[0]['news_body'])"
+    "print(data_with_vectors[0][\"news_body\"])"
    ]
   },
   {
@@ -337,7 +354,7 @@
     }
    ],
    "source": [
-    "print(data_with_vectors[0]['openai_vector'][:5])"
+    "print(data_with_vectors[0][\"openai_vector\"][:5])"
    ]
   },
   {
@@ -380,7 +397,7 @@
     "    data_with_vectors = json.load(f)\n",
     "\n",
     "n_clusters = 5\n",
-    "normalized_vectors = normalize([x['openai_vector'] for x in data_with_vectors])\n",
+    "normalized_vectors = normalize([x[\"openai_vector\"] for x in data_with_vectors])\n",
     "\n",
     "logger.info(\"Started training Kmeans model...\")\n",
     "kmeans_model = KMeans(n_clusters=n_clusters, random_state=123)\n",
@@ -413,8 +430,8 @@
     "\n",
     "es_client = Elasticsearch(\n",
     "    hosts=os.getenv(\"ES_HOST\"),\n",
-    "    basic_auth=(os.getenv(\"ES_USERNAME\"), os.getenv(\"ES_PASSWORD\"))\n",
-    ")\n"
+    "    basic_auth=(os.getenv(\"ES_USERNAME\"), os.getenv(\"ES_PASSWORD\")),\n",
+    ")"
    ]
   },
   {
@@ -435,10 +452,7 @@
     "def ingest_data_to_es(es: Elasticsearch, index_name, data) -> None:\n",
     "    actions = []\n",
     "    for doc in data:\n",
-    "        action = {\n",
-    "            \"_index\": index_name,\n",
-    "            \"_source\": doc\n",
-    "        }\n",
+    "        action = {\"_index\": index_name, \"_source\": doc}\n",
     "        actions.append(action)\n",
     "\n",
     "    if actions:\n",
@@ -446,7 +460,9 @@
     "        logger.info(f\"Ingested {len(actions)} documents into index '{index_name}'\")\n",
     "\n",
     "\n",
-    "ingest_data_to_es(es_client, index_name=\"newsgroups_openai_dataset\", data=data_with_vectors)"
+    "ingest_data_to_es(\n",
+    "    es_client, index_name=\"newsgroups_openai_dataset\", data=data_with_vectors\n",
+    ")"
    ]
   },
   {
@@ -490,9 +506,9 @@
    ],
    "source": [
     "script = {\n",
-    " \"script\": {\n",
-    "   \"lang\": \"painless\",\n",
-    "   \"source\": \"\"\" \n",
+    "    \"script\": {\n",
+    "        \"lang\": \"painless\",\n",
+    "        \"source\": \"\"\" \n",
     "     double euclideanDistance(List array1, List array2) {\n",
     "       double sum = 0.0;\n",
     "       for (int i=0; i<array1.length; i++) {\n",
@@ -540,16 +556,16 @@
     "     ctx[\"ml_clustering.closestCluster\"] = closestCluster;\n",
     "     ctx[\"ml_clustering.minDistance\"] = Collections.min(distances);\n",
     "   \"\"\",\n",
-    "   \"params\": {\n",
-    "     \"clusterCenters\": cluster_centers,\n",
-    "     \"analysisField\": \"openai_vector\",\n",
-    "     \"normalize\": True\n",
-    "   }\n",
-    " }\n",
+    "        \"params\": {\n",
+    "            \"clusterCenters\": cluster_centers,\n",
+    "            \"analysisField\": \"openai_vector\",\n",
+    "            \"normalize\": True,\n",
+    "        },\n",
+    "    }\n",
     "}\n",
     "\n",
     "es_client.ingest.put_pipeline(\n",
-    "   id=\"ml_clustering_5_newsgroup_openai\", processors=[script]\n",
+    "    id=\"ml_clustering_5_newsgroup_openai\", processors=[script]\n",
     ")"
    ]
   },
@@ -587,15 +603,12 @@
    ],
    "source": [
     "test_response = es_client.ingest.simulate(\n",
-    "    id=\"ml_clustering_5_newsgroup_openai\",\n",
-    "    docs=[\n",
-    "        {\"_source\": data_with_vectors[1]}\n",
-    "    ]\n",
+    "    id=\"ml_clustering_5_newsgroup_openai\", docs=[{\"_source\": data_with_vectors[1]}]\n",
     ")\n",
-    "source = test_response['docs'][0][\"doc\"][\"_source\"].copy()\n",
+    "source = test_response[\"docs\"][0][\"doc\"][\"_source\"].copy()\n",
     "print(source.keys())\n",
     "\n",
-    "source['ml_clustering.closestCluster']"
+    "source[\"ml_clustering.closestCluster\"]"
    ]
   },
   {
@@ -619,8 +632,8 @@
     "    },\n",
     "    \"dest\": {\n",
     "        \"index\": \"newsgroups_openai_dataset_with_clustering\",\n",
-    "        \"pipeline\": \"ml_clustering_5_newsgroup_openai\"\n",
-    "    }\n",
+    "        \"pipeline\": \"ml_clustering_5_newsgroup_openai\",\n",
+    "    },\n",
     "}\n",
     "task = es_client.reindex(body=body, wait_for_completion=False)"
    ]
@@ -656,7 +669,7 @@
     }
    ],
    "source": [
-    "print(\"task completed: \", es_client.tasks.get(task_id=task['task'])['completed'])"
+    "print(\"task completed: \", es_client.tasks.get(task_id=task[\"task\"])[\"completed\"])"
    ]
   },
   {
@@ -679,11 +692,11 @@
     "\n",
     "es_client = Elasticsearch(\n",
     "    hosts=os.getenv(\"ES_HOST\"),\n",
-    "    basic_auth=(os.getenv(\"ES_USERNAME\"), os.getenv(\"ES_PASSWORD\"))\n",
+    "    basic_auth=(os.getenv(\"ES_USERNAME\"), os.getenv(\"ES_PASSWORD\")),\n",
     ")\n",
     "\n",
     "data = list(helpers.scan(es_client, index=\"newsgroups_openai_dataset_with_clustering\"))\n",
-    "data = [x['_source'] for x in data]"
+    "data = [x[\"_source\"] for x in data]"
    ]
   },
   {
@@ -710,15 +723,20 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "df_openai = pd.DataFrame(data)\n",
     "\n",
     "open_ai_category_map = {}\n",
-    "for i in df_openai['target'].unique():\n",
-    "    vcs = df_openai[df_openai['target'] == i]['ml_clustering.closestCluster'].value_counts()\n",
+    "for i in df_openai[\"target\"].unique():\n",
+    "    vcs = df_openai[df_openai[\"target\"] == i][\n",
+    "        \"ml_clustering.closestCluster\"\n",
+    "    ].value_counts()\n",
     "    choice = int(vcs.index[0])\n",
     "    open_ai_category_map[choice] = i\n",
     "\n",
-    "df_openai['cluster_label'] = df_openai['ml_clustering.closestCluster'].map(open_ai_category_map)\n",
+    "df_openai[\"cluster_label\"] = df_openai[\"ml_clustering.closestCluster\"].map(\n",
+    "    open_ai_category_map\n",
+    ")\n",
     "\n",
     "print(open_ai_category_map)"
    ]
@@ -753,8 +771,8 @@
    "source": [
     "from sklearn.metrics import accuracy_score, confusion_matrix, mutual_info_score\n",
     "\n",
-    "openai_true = df_openai['target']\n",
-    "openai_pred = df_openai['cluster_label']\n",
+    "openai_true = df_openai[\"target\"]\n",
+    "openai_pred = df_openai[\"cluster_label\"]\n",
     "\n",
     "print(\"accuracy\", accuracy_score(y_true=openai_true, y_pred=openai_pred))\n",
     "print(confusion_matrix(y_true=openai_true, y_pred=openai_pred))"
@@ -779,10 +797,12 @@
     "from sklearn.manifold import TSNE\n",
     "\n",
     "model_openai = TSNE(n_components=2)\n",
-    "transformed_openai = model_openai.fit_transform(np.asarray(list(df_openai['openai_vector'])))\n",
+    "transformed_openai = model_openai.fit_transform(\n",
+    "    np.asarray(list(df_openai[\"openai_vector\"]))\n",
+    ")\n",
     "\n",
-    "df_openai['tsne_x'] = transformed_openai[:,0]\n",
-    "df_openai['tsne_y'] = transformed_openai[:,1]"
+    "df_openai[\"tsne_x\"] = transformed_openai[:, 0]\n",
+    "df_openai[\"tsne_y\"] = transformed_openai[:, 1]"
    ]
   },
   {
@@ -859,13 +879,14 @@
     "\n",
     "output_notebook()\n",
     "\n",
+    "\n",
     "def create_source(subset):\n",
     "    source = ColumnDataSource(\n",
     "        data={\n",
     "            \"index\": list(subset.index),\n",
-    "            \"x\": list(subset['tsne_x']),\n",
-    "            \"y\": list(subset['tsne_y']),\n",
-    "            \"news_body\": list([x[:100] for x in subset['news_body']]),\n",
+    "            \"x\": list(subset[\"tsne_x\"]),\n",
+    "            \"y\": list(subset[\"tsne_y\"]),\n",
+    "            \"news_body\": list([x[:100] for x in subset[\"news_body\"]]),\n",
     "            \"cluster_number\": list(subset[\"cluster_label\"]),\n",
     "            \"pred_color\": list(subset[\"cluster_label\"].map(color_map)),\n",
     "            \"actual_color\": list(subset[\"target\"].map(color_map)),\n",
@@ -874,20 +895,22 @@
     "    return source\n",
     "\n",
     "\n",
-    "hover = HoverTool(tooltips=[\n",
-    "    (\"index\", \"$index\"),\n",
-    "    (\"(x,y)\", \"(@x, @y)\"),\n",
-    "    ('news_body', '@news_body'),\n",
-    "])\n",
+    "hover = HoverTool(\n",
+    "    tooltips=[\n",
+    "        (\"index\", \"$index\"),\n",
+    "        (\"(x,y)\", \"(@x, @y)\"),\n",
+    "        (\"news_body\", \"@news_body\"),\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "color_map = dict(zip(df_openai['target'].unique(), colors_list))\n",
+    "color_map = dict(zip(df_openai[\"target\"].unique(), colors_list))\n",
     "\n",
     "groups_map = {\n",
-    "    'comp.sys.ibm.pc.hardware': \"train: pc hardware\",\n",
-    "    'rec.sport.baseball': \"train: baseball\",\n",
-    "    'rec.sport.hockey': \"train: hockey\",\n",
-    "    'sci.med': \"train: medicine\",\n",
-    "    'talk.religion.misc': \"train: religion\",\n",
+    "    \"comp.sys.ibm.pc.hardware\": \"train: pc hardware\",\n",
+    "    \"rec.sport.baseball\": \"train: baseball\",\n",
+    "    \"rec.sport.hockey\": \"train: hockey\",\n",
+    "    \"sci.med\": \"train: medicine\",\n",
+    "    \"talk.religion.misc\": \"train: religion\",\n",
     "}\n",
     "\n",
     "p = figure(width=600, height=400, toolbar_location=None, title=\"openai actual labels\")\n",
@@ -895,22 +918,42 @@
     "\n",
     "for newsgroup in groups_map.keys():\n",
     "    source = create_source(df_openai[df_openai[\"target\"] == newsgroup])\n",
-    "    p.scatter(\"x\", \"y\", size=10, alpha=0.25, line_alpha=0, legend_label=groups_map[newsgroup], color=\"actual_color\", source=source)\n",
+    "    p.scatter(\n",
+    "        \"x\",\n",
+    "        \"y\",\n",
+    "        size=10,\n",
+    "        alpha=0.25,\n",
+    "        line_alpha=0,\n",
+    "        legend_label=groups_map[newsgroup],\n",
+    "        color=\"actual_color\",\n",
+    "        source=source,\n",
+    "    )\n",
     "p.axis.visible = False\n",
     "p.legend.click_policy = \"hide\"\n",
     "p.legend[0].item_background_fill_alpha = 1\n",
     "p.legend.item_background_fill_alpha = 0\n",
-    "p.add_layout(p.legend[0], 'right')\n",
+    "p.add_layout(p.legend[0], \"right\")\n",
     "\n",
-    "p2 = figure(width=600, height=400, toolbar_location=None, title=\"openai predicted clusters\")\n",
+    "p2 = figure(\n",
+    "    width=600, height=400, toolbar_location=None, title=\"openai predicted clusters\"\n",
+    ")\n",
     "p2.tools.append(hover)\n",
     "for newsgroup in groups_map.keys():\n",
     "    source = create_source(df_openai[df_openai[\"target\"] == newsgroup])\n",
-    "    p2.scatter(\"x\", \"y\", size=10, alpha=0.25, line_alpha=0, legend_label=groups_map[newsgroup], fill_color=\"pred_color\", source=source)\n",
+    "    p2.scatter(\n",
+    "        \"x\",\n",
+    "        \"y\",\n",
+    "        size=10,\n",
+    "        alpha=0.25,\n",
+    "        line_alpha=0,\n",
+    "        legend_label=groups_map[newsgroup],\n",
+    "        fill_color=\"pred_color\",\n",
+    "        source=source,\n",
+    "    )\n",
     "p2.axis.visible = False\n",
     "p2.legend.click_policy = \"hide\"\n",
     "p2.legend[0].glyph_height = 0\n",
-    "p2.add_layout(p2.legend[0], 'right')\n",
+    "p2.add_layout(p2.legend[0], \"right\")\n",
     "p2.axis.visible = False\n",
     "\n",
     "show(column(p, p2))"
