cloud id replaced by endpoint url

--- a/supporting-blog-content/ingesting-data-with-big-query/ingesting_data_with_big_query_notebook.ipynb
+++ b/supporting-blog-content/ingesting-data-with-big-query/ingesting_data_with_big_query_notebook.ipynb
@@ -82,7 +82,7 @@
       },
       "outputs": [],
       "source": [
-        "ELASTIC_CLUSTER_ID = getpass(\"Elastic Cloud ID: \")\n",
+        "ELASTICSEARCH_ENDPOINT = getpass(\"Elasticsearch endpoint: \")\n",
         "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
         "\n",
         "\n",
@@ -113,7 +113,7 @@
         "\n",
         "# Elasticsearch client\n",
         "es_client = Elasticsearch(\n",
-        "    cloud_id=ELASTIC_CLUSTER_ID,\n",
+        "    ELASTICSEARCH_ENDPOINT,\n",
         "    api_key=ELASTIC_API_KEY,\n",
         ")"
       ]
