--- a/supporting-blog-content/fetch-surrounding-chunks/fetch-surrounding-chunks.ipynb
+++ b/supporting-blog-content/fetch-surrounding-chunks/fetch-surrounding-chunks.ipynb
@@ -6,7 +6,7 @@
     "id": "aAUkwshINwV7"
    },
    "source": [
-    "# Fetch surronding chucks (N-1, N+1)\n",
+    "# Fetch surrounding chunks (N-1, N+1)\n",
     "\n",
     "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/supporting-blog-content/fetch-surrounding-chunks/fetch-surrounding-chunks.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
