Minor tweak to the extraction rule cell to handle an edge case

--- a/notebooks/enterprise-search/elastic-crawler-to-open-crawler-migration.ipynb
+++ b/notebooks/enterprise-search/elastic-crawler-to-open-crawler-migration.ipynb
@@ -311,13 +311,15 @@
     "        }\n",
     "    ]\n",
     "\n",
-    "    print(\n",
-    "        f\"{extr_count}.) Crawler {config_oid} has extraction rules {temp_extraction_rulesets}\\n\"\n",
-    "    )\n",
-    "    extr_count += 1\n",
-    "    inflight_configuration_data[config_oid][\"domains_temp\"][domain_oid][\n",
-    "        \"extraction_rulesets\"\n",
-    "    ] = temp_extraction_rulesets"
+    "    if domain_oid in inflight_configuration_data[config_oid][\"domains_temp\"]:\n",
+    "        print(\n",
+    "            f\"{extr_count}.) Crawler {config_oid} has extraction rules {temp_extraction_rulesets}\\n\"\n",
+    "        )\n",
+    "        extr_count += 1\n",
+    "\n",
+    "        inflight_configuration_data[config_oid][\"domains_temp\"][domain_oid][\n",
+    "            \"extraction_rulesets\"\n",
+    "        ] = temp_extraction_rulesets"
    ]
   },
   {
