Revised the if statement to check config_oids too

--- a/notebooks/enterprise-search/elastic-crawler-to-open-crawler-migration.ipynb
+++ b/notebooks/enterprise-search/elastic-crawler-to-open-crawler-migration.ipynb
@@ -269,8 +269,12 @@
     "    config_oid = source[\"configuration_oid\"]\n",
     "    domain_oid = source[\"domain_oid\"]\n",
     "\n",
-    "    # ensure the domain oid actually exists in our in-memory data structure\n",
-    "    if domain_oid in inflight_configuration_data[config_oid][\"domains_temp\"]:\n",
+    "    # ensure the config and domain oids actually exist in our in-memory data structure\n",
+    "    if (\n",
+    "        config_oid in inflight_configuration_data\n",
+    "        and domain_oid in inflight_configuration_data[config_oid][\"domains_temp\"]\n",
+    "    ):\n",
+    "\n",
     "        all_rules = source[\"rules\"]\n",
     "        all_url_filters = source[\"url_filters\"]\n",
     "\n",
