--- a/supporting-blog-content/building-multimodal-rag-with-elasticsearch-gotham/notebook/01-mmrag-blog-quick-start.ipynb
+++ b/supporting-blog-content/building-multimodal-rag-with-elasticsearch-gotham/notebook/01-mmrag-blog-quick-start.ipynb
@@ -34,7 +34,7 @@
       "outputs": [],
       "source": [
         "# Clone do repositório específico com a branch feature/multimodal-rag-gotham\n",
-        "!git clone https://github.com/salgado/elasticsearch-labs.git"
+        "!git clone -b feature/multimodal-rag-gotham https://github.com/salgado/elasticsearch-labs.git"
       ]
     },
     {
