Updated logout error
Function calling log output showed the wrong call. updated to reflex actual function name, query_elasticsearch

--- a/supporting-blog-content/unifying-elastic-vector-database-and-llms-for-intelligent-query/Unifying_Elastic_Vector_Database_and_LLMs_for_Intelligent_Query.ipynb
+++ b/supporting-blog-content/unifying-elastic-vector-database-and-llms-for-intelligent-query/Unifying_Elastic_Vector_Database_and_LLMs_for_Intelligent_Query.ipynb
@@ -744,7 +744,7 @@
     "                        print(\"Error: 'query' is required for Elasticsearch queries.\")\n",
     "                        return None\n",
     "\n",
-    "                    print(\"Function Arguments for extract_hotel_search_parameters:\")\n",
+    "                    print(\"Function Arguments for query_elasticsearch:\")\n",
     "                    print(function_args)\n",
     "\n",
     "                    # Update parameters directly\n",
@@ -1073,7 +1073,7 @@
       "  Arguments: {\"query\":\"recently renovated accommodations 250m from Belongil Beach with at least 4 stars and with a pool and gym\",\"latitude\":-28.6337328,\"longitude\":153.6003455,\"distance\":\"250m\",\"rating\":4,\"attraction\":\"recently renovated, pool, gym\"}\n",
       "\n",
       "--------------------------------------------------\n",
-      "Function Arguments for extract_hotel_search_parameters:\n",
+      "Function Arguments for query_elasticsearch:\n",
       "{'query': 'recently renovated accommodations 250m from Belongil Beach with at least 4 stars and with a pool and gym', 'latitude': -28.6337328, 'longitude': 153.6003455, 'distance': '250m', 'rating': 4, 'attraction': 'recently renovated, pool, gym'}\n",
       "Parameters for Elasticsearch:\n",
       "{'query': 'recently renovated accommodations 250m from Belongil Beach with at least 4 stars and with a pool and gym', 'latitude': -28.6337328, 'longitude': 153.6003455, 'distance': '250m', 'rating': 4, 'attraction': 'recently renovated, pool, gym'}\n",
