fixing first line notebook to main repo

--- a/supporting-blog-content/building-multimodal-rag-with-elasticsearch-gotham/notebook/01-mmrag-blog-quick-start.ipynb
+++ b/supporting-blog-content/building-multimodal-rag-with-elasticsearch-gotham/notebook/01-mmrag-blog-quick-start.ipynb
@@ -33,8 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "# Clone do repositório específico com a branch feature/multimodal-rag-gotham\n",
-        "!git clone -b feature/multimodal-rag-gotham https://github.com/salgado/elasticsearch-labs.git"
+        "!git clone https://github.com/elastic/elasticsearch-labs.git"
       ]
     },
     {
