Renamed Notebook to match other App Search notebook naming + removed unneeded deps + Fixed some wording

--- a/notebooks/enterprise-search/app-search-crawler-to-open-crawler-migration.ipynb
+++ b/notebooks/enterprise-search/app-search-crawler-to-open-crawler-migration.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Hello, future Open Crawler user!\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/enterprise-search/appsearch-crawler-to-open-crawler-migration.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/enterprise-search/app-search-crawler-to-open-crawler-migration.ipynb)\n",
     "\n",
     "This notebook is designed to help you migrate your App Search Web Crawler configurations to Open Crawler-friendly YAML!\n",
     "\n",
@@ -29,7 +29,6 @@
     "from elasticsearch import Elasticsearch\n",
     "\n",
     "import os\n",
-    "import json\n",
     "import yaml"
    ]
   },
@@ -83,7 +82,10 @@
    "id": "4756ffaa-678d-41aa-865b-909038034104",
    "metadata": {},
    "source": [
-    "### Step 1: Get information on all App Search engines and their Web Crawlers"
+    "### Step 1: Get information on all App Search engines and their Web Crawlers\n",
+    "\n",
+    "First, we need to establish what Crawlers you have and their basic configuration details.\n",
+    "This next cell will attempt to pull configurations for every distinct App Search Engine you have in your Elasticsearch instance."
    ]
   },
   {
