Added some links in the intro and outro markdown cells

--- a/notebooks/enterprise-search/app-search-crawler-to-open-crawler-migration.ipynb
+++ b/notebooks/enterprise-search/app-search-crawler-to-open-crawler-migration.ipynb
@@ -8,7 +8,7 @@
     "## Hello, future Open Crawler user!\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/enterprise-search/app-search-crawler-to-open-crawler-migration.ipynb)\n",
     "\n",
-    "This notebook is designed to help you migrate your App Search Web Crawler configurations to Open Crawler-friendly YAML!\n",
+    "This notebook is designed to help you migrate your [App Search Web Crawler](https://www.elastic.co/guide/en/app-search/current/web-crawler.html) configurations to Open Crawler-friendly YAML!\n",
     "\n",
     "We recommend running each cell individually in a sequential fashion, as each cell is dependent on previous cells having been run. Furthermore, we recommend that you only run each cell once as re-running cells may result in errors or incorrect YAML files.\n",
     "\n",
@@ -354,6 +354,10 @@
     "### Next Steps\n",
     "\n",
     "Now that the YAML files have been generated, you can visit the Open Crawler GitHub repository to learn more about how to deploy Open Crawler: https://github.com/elastic/crawler#quickstart\n",
+    "\n",
+    "Additionally, you can learn more about Open Crawler via the following blog posts:\n",
+    "- [Open Crawler's promotion to beta release](https://www.elastic.co/search-labs/blog/elastic-open-crawler-beta-release)\n",
+    "- [How to use Open Crawler with Semantic Text](https://www.elastic.co/search-labs/blog/semantic-search-open-crawler) to easily crawl websites and make them semantically searchable\n",
     "\n",
     "If you find any problems with this Notebook, please feel free to create an issue in the elasticsearch-labs repository: https://github.com/elastic/elasticsearch-labs/issues"
    ]
