Switching to using elastic cloud ID instead of serverless endpoint

--- a/notebooks/document-chunking/configuring-chunking-settings-for-inference-endpoints.ipynb
+++ b/notebooks/document-chunking/configuring-chunking-settings-for-inference-endpoints.ipynb
@@ -23,7 +23,7 @@
     "For this example, you will need:\n",
     "\n",
     "- An Elastic deployment:\n",
-    "   - We'll be using [Elastic serverless](https://www.elastic.co/docs/current/serverless) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
+    "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "\n",
     "- Elasticsearch 8.16 or above.\n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "690ff9af",
    "metadata": {},
    "outputs": [],
@@ -91,19 +91,19 @@
    "source": [
     "Now we can instantiate the Python Elasticsearch client.\n",
     "\n",
-    "First provide your API key and Serverless Endpoint.\n",
-    "Then create a `client` object that instantiates an instance of the `Elasticsearch` class."
+    "First we prompt the user for their password and Cloud ID.\n",
+    "Then we create a `client` object that instantiates an instance of the `Elasticsearch` class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "195cc597",
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
-    "ELASTIC_SERVERLESS_ENDPOINT = getpass(\"Elastic serverless endpoint: \")\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
@@ -112,7 +112,7 @@
     "client = Elasticsearch(\n",
     "    # For local development\n",
     "    # hosts=[\"http://localhost:9200\"],\n",
-    "    hosts=[ELASTIC_SERVERLESS_ENDPOINT],\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     "    request_timeout=120,\n",
     "    max_retries=10,\n",
@@ -281,7 +281,7 @@
     "<a name=\"conclusion\"></a>\n",
     "## Conclusion\n",
     "\n",
-    "You've now learned how to configure chunking settings for an inference endpoint! For more infomration about configurable chunking, see the [configuring chunking](https://www.elastic.co/guide/en/elasticsearch/reference/current/inference-apis.html#infer-chunking-config) documentation."
+    "You've now learned how to configure chunking settings for an inference endpoint! For more information about configurable chunking, see the [configuring chunking](https://www.elastic.co/guide/en/elasticsearch/reference/current/inference-apis.html#infer-chunking-config) documentation."
    ]
   }
  ],
